stop jumping

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -93,6 +93,7 @@
   padding: 0;*/
   list-style: none;
   padding-inline-start: 0px;
+  height: 34px;
 
   .nav-item {
     display: inline-block;
